--- a/md/toc.mdx
+++ b/md/toc.mdx
@@ -1,6 +1,6 @@
 ---
 title: Table of Contents
-date: 2025-05-05
+date: 2025-05-18
 ---
 
 # Table of Contents
@@ -39,6 +39,7 @@ date: 2025-05-05
   - [Syntax](/cvx#syntax)
   - [How cvx works](/cvx#how-cvx-works)
   - [Example Usage](/cvx#example-usage)
+    - [Cvx Types](/cvx#cvx-types)
   - [Advantages](/cvx#advantages)
   - [IntelliSense](/cvx#intellisense)
 - [**ocx**](/ocx#ocx)
@@ -111,6 +112,10 @@ date: 2025-05-05
   - [Targeting ES2020](/exported#targeting-es2020)
 - [**License**](/license#license)
 - [**CHANGELOG**](/changelog#changelog)
+  - [v1.0.1](/changelog#101---2025-05-18)
+    - [Added](/changelog#added)
+    - [Fixed](/changelog#fixed)
+    - [Notes](/changelog#notes)
   - [v1.0.0](/changelog#100---2025-05-05)
     - [Enhancements](/changelog#enhancements)
     - [Documentation](/changelog#documentation)
