--- a/md/cvx.mdx
+++ b/md/cvx.mdx
@@ -90,6 +90,35 @@ type Color = NonNullable<cvxVariants<typeof classes>["color"]>;
 // type Color = "blue" | "green" | "red" | "purple";
 ```
 
+### Cvx Types
+
+```ts
+const xx = cvx({
+  assign: "CLASS",
+  variants: {
+    state: {
+      true: "IS_TRUE",
+      false: "IS_FALSE",
+      Infinity: "IS_INFINITY",
+      NaN: "IS_NAN",
+      null: "IS_NULL",
+      undefined: "IS_UNDEFINED"
+    }
+  }
+});
+
+console.log(xx({ state: true })); // ✅ (valid)
+console.log(xx({ state: false })); // ✅ (valid)
+console.log(xx({ state: Infinity })); // ✅ (valid)
+console.log(xx({ state: null })); // ✅ (valid)
+console.log(xx({ state: NaN })); // ✅ (valid)
+console.log(xx({ state: undefined })); // ✅ (valid)
+console.log(xx({ state: "random" as any })); // ❌ (not found!)
+
+type state = cvxVariants<typeof xx>["state"];
+// type state = number | boolean | null | undefined
+```
+
 ## Advantages
 
 - **Flexibility:** <br />
